--- a/server/model-config.json
+++ b/server/model-config.json
@@ -33,7 +33,13 @@
     "public": false
   },
   "CoffeeShop": {
-    "dataSource": "mysqlDs",
+    "dataSource": "db",
     "public": true
+  },
+  "admin": {
+    "dataSource": "db"
+  },
+  "article": {
+    "dataSource": "db"
   }
 }
